--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 								</header>
 								<a href="#work" class="jumplink pic">
 									<!--<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>-->
-									<img src="images/me.jpg" alt="" />
+									<img src="me.jpg" alt="" />
 								</a>
 							</article>
 
@@ -58,7 +58,7 @@
 							</article>
 
 						<!-- Research -->
-							<article id="contact" class="panel">
+							<article id="research" class="panel">
 								<header>
 									<h2>Research Statement</h2>
 									<p> Broadly, I'm interested in researching abstractions. Specifically, this can be explained as an interested in researching 
