--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 								</header>
 								<a href="#work" class="jumplink pic">
 									<!--<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>-->
-									<img href="https://github.com/ana-brendel/ana-brendel.github.io/blob/main/me.JPG" alt="" />
+									<img src="https://github.com/ana-brendel/ana-brendel.github.io/blob/main/me.JPG" alt="" />
 								</a>
 							</article>
 
