--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
 				<!-- Nav -->
 					<nav id="nav">
-						<a href="#" class="icon solid fa-home"><span>Home</span></a>
-						<a href="#work" class="icon solid fa-user"><span>About Me</span></a>
-						<a href="#contact" class="icon solid fa-folder"><span>Research</span></a>
+						<a href="#home" class="icon solid fa-home"><span>Home</span></a>
+						<a href="#about me" class="icon solid fa-user"><span>About Me</span></a>
+						<a href="#research" class="icon solid fa-folder"><span>Research</span></a>
 						<a href="#experience" class="icon solid fa-clipboard-list"><span>Experience</span></a>
 						<a href="https://www.linkedin.com/in/ana-brendel/" class="icon brands fa-linkedin"><span>LinkedIn</span></a>
 					</nav>
