--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
 									<p1>B.S. Computer Science <font size="-1">The University of Texas at Austin - May 2022</font> <br>
 									B.S. Mathematics <font size="-1">The University of Texas at Austin - May 2022</font> <br> </p1> 
 									<font color="grey">anabrendel25[at]gmail[dot]com </font> <br> 
-									<a href="#work"> <font color="grey"> curriculum vitae </font></a> 
+									<a href="#research"> <font color="grey"> curriculum vitae </font></a> 
 								</header>
-								<a href="#work" class="jumplink pic">
+								
 									<!--<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>-->
 									<img src="images/me.JPG" alt="" />
-								</a>
+								
 							</article>
 
 						<!-- About Me -->
-							<article id="work" class="panel">
+							<article id="about me" class="panel">
 								<header>
 									<h2>About Me</h2>
 								</header>
