--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 									<font color="grey">anabrendel25[at]gmail[dot]com </font> <br> 
 									<a href="#reseach"> <font color="grey"> curriculum vitae </font></a> 
 								</header>
-								<a href="about me" class="jumplink pic"></a>
+								<a href="about me" class="jumplink pic">
 									<!--<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>-->
 									<img src="images/me.JPG" alt="" />
 								</a>
