--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 									<p1>B.S. Computer Science <font size="-1">The University of Texas at Austin - May 2022</font> <br>
 									B.S. Mathematics <font size="-1">The University of Texas at Austin - May 2022</font> <br> </p1> 
 									<font color="grey">anabrendel25[at]gmail[dot]com </font> <br> 
-									<a href="#reseach"> <font color="grey"> curriculum vitae </font></a> 
+									<a href="#work"> <font color="grey"> curriculum vitae </font></a> 
 								</header>
-								<a href="about me" class="jumplink pic">
+								<a href="#work" class="jumplink pic">
 									<!--<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>-->
 									<img src="images/me.JPG" alt="" />
 								</a>
