--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
-						<a href="#about me" class="icon solid fa-user"><span>About Me</span></a>
+						<a href="#work" class="icon solid fa-user"><span>About Me</span></a>
 						<a href="#contact" class="icon solid fa-folder"><span>Research</span></a>
 						<a href="#experience" class="icon solid fa-clipboard-list"><span>Experience</span></a>
 						<a href="https://www.linkedin.com/in/ana-brendel/" class="icon brands fa-linkedin"><span>LinkedIn</span></a>
@@ -46,7 +46,7 @@
 							</article>
 
 						<!-- About Me -->
-							<article id="about me" class="panel">
+							<article id="work" class="panel">
 								<header>
 									<h2>About Me</h2>
 								</header>
