--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
-						<a href="#work" class="icon solid fa-user"><span>About Me</span></a>
+						<a href="#me" class="icon solid fa-user"><span>About Me</span></a>
 						<a href="#contact" class="icon solid fa-folder"><span>Research</span></a>
 						<a href="#experience" class="icon solid fa-clipboard-list"><span>Experience</span></a>
 						<a href="https://www.linkedin.com/in/ana-brendel/" class="icon brands fa-linkedin"><span>LinkedIn</span></a>
@@ -39,14 +39,14 @@
 									<font color="grey">anabrendel25[at]gmail[dot]com </font> <br> 
 									<a href="#work"> <font color="grey"> curriculum vitae </font></a> 
 								</header>
-								<a href="#work" class="jumplink pic">
+								<a href="#me" class="jumplink pic">
 									<!--<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>-->
 									<img src="images/me.JPG" alt="" />
 								</a>
 							</article>
 
 						<!-- About Me -->
-							<article id="work" class="panel">
+							<article id="me" class="panel">
 								<header>
 									<h2>About Me</h2>
 								</header>
