try to link to cv

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 									<p1>B.S. Computer Science <font size="-1">The University of Texas at Austin - May 2022</font> <br>
 									B.S. Mathematics <font size="-1">The University of Texas at Austin - May 2022</font> <br> </p1> 
 									<font color="grey">anabrendel25[at]gmail[dot]com </font> <br> 
-									<a href="#work"> <font color="grey"> curriculum vitae </font></a> 
+									<a href="brendel_cv.pdf"> <font color="grey"> curriculum vitae </font></a> 
 								</header>
 								<a href="#me" class="jumplink pic">
 									<!--<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>-->
